--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,15 +8,13 @@ author_profile: true
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
-<!-- {% for post in site.publications %}
-  {% include archive-single.html %}
-{% endfor %} -->
-
-
-
 {% for post in site.publications %}
-  {% include archive-single-cv.html %}
+  {% include archive-single.html %}
 {% endfor %}
+
+<ul>{% for post in site.publications %}
+  {% include archive-single-cv.html %}
+{% endfor %}</ul>
 
 
 
