--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -8,9 +8,9 @@ author_profile: true
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
-{% for post in site.publications %}
+<!-- {% for post in site.publications %}
   {% include archive-single.html %}
-{% endfor %}
+{% endfor %} -->
 
 <ul>{% for post in site.publications %}
   {% include archive-single-cv.html %}
