--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -13,7 +13,7 @@ author_profile: true
 {% endfor %} -->
 
 <ul>{% for post in site.publications %}
-  {% include archive-single-cv.html %}
+  {% include publication-sigle.html %}
 {% endfor %}</ul>
 
 
